--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="img_box">
           <div>
             <img
-              src="(./4e9949ab-f7aa-4d2f-921b-1741605a0f17-removebg-preview.png)"
+              src="image\4e9949ab-f7aa-4d2f-921b-1741605a0f17-removebg-preview.png"
               alt="image_pawankumar"
             />
           </div>
