--- a/About.html
+++ b/About.html
@@ -83,7 +83,7 @@
 
       <div class="image">
         <img
-          src="/image/4e9949ab-f7aa-4d2f-921b-1741605a0f17-removebg-preview.png"
+          src="image\4e9949ab-f7aa-4d2f-921b-1741605a0f17-removebg-preview.png"
           alt=""
         />
       </div>
