--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           <!-- <a href="projects  .html" style="--i: 4">Projects</a> -->
           <a href="Contact.html" style="--i: 5">Contact</a>
         </div>
+        <!-- <span class="mobile click"><i class="fa-solid fa-bars"></i></span>
+        <span class="hidden"> <i class="fa-solid fa-x"></i></span> -->
       </nav>
       <section class="content_box">
         <div class="text_box">
@@ -75,5 +77,6 @@
         </div>
       </section>
     </header>
+    <script src="mobile.js"></script>
   </body>
 </html>
