--- a/Contact.html
+++ b/Contact.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="contect.css" />
   </head>
   <body>
