--- a/About.html
+++ b/About.html
@@ -65,6 +65,7 @@
         </div>
         <div>
           <form
+            class="form"
             action="https://formsubmit.co/pawansuthardew@gmail.com"
             method="post"
           >
