--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="text_box">
           <h1>Hello,it's Me</h1>
           <h2>Pawan Kumar</h2>
-          <h3>And I'm a <span>Frontend Developer</span></h3>
+          <h3>And I'm a <span>full stack Developer</span></h3>
           <p>
             Specializing in creating interactive and responsive web
             applications...
